--- a/libraries/main/css/main.css
+++ b/libraries/main/css/main.css
@@ -4594,3 +4594,18 @@ fieldset[disabled] .btn-vk.active {
   color: #587ea3;
   background-color: #ffffff;
 }
+
+.cabecera{
+	background-color: #EEEEEE;
+	padding: 5px;
+
+}
+#reglon_factura{
+
+	padding-left: 15px !important;
+}
+
+.cont_botones{
+
+	padding: auto;
+}
