--- a/libraries/main/css/main.css
+++ b/libraries/main/css/main.css
@@ -4600,7 +4600,7 @@ fieldset[disabled] .btn-vk.active {
 	padding: 5px;
 
 }
-#reglon_factura{
+#renglon_factura{
 
 	padding-left: 15px !important;
 }
